force-app/main/default/objects/Transfer__c/Transfer__c.object-meta.xml
<CustomObject>
    <label>Transfer</label>
    <nameField>
        
        <label>Transfer Name</label>
        
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>