force-app/main/default/objects/Transfer__c/fields/Allocation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Allocation Schd. field within Transfer looking up the Allocation Schd. object.</description>
    <label>Allocation Schedule</label>
    <referenceTo>Schedule_Z__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>