force-app/main/default/objects/Transfer__c/fields/Attempted_kWh_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Attempted_kWh_Transfer__c</fullName>
    <inlineHelpText>Total Production from Production period used for calculating bills</inlineHelpText>
    <label>Attempted kWh Transfer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>