force-app/main/default/objects/Transfer__c/fields/Attempted_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Transfer__c</fullName>
    <inlineHelpText>Credits Available for Allocation from Production period used for calculating bills</inlineHelpText>
    <label>Attempted Credit Transfer</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>