force-app/main/default/objects/Transfer__c/fields/Bill_By__c.field-meta.xml
<CustomField>
    <fullName>Bill_By__c</fullName>
    <inlineHelpText>Credits are transferred and billed by UASB, Adjustment, or Not Billed</inlineHelpText>
    <label>Bill By</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>UASB</fullName>
                
                
                    <label>UASB</label>
                
                </value>
            
                <value>
                
                    <fullName>Adjustment</fullName>
                
                
                    <label>Adjustment</label>
                
                </value>
            
                <value>
                
                    <fullName>Not Billed</fullName>
                
                
                    <label>Not Billed</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>