force-app/main/default/objects/Transfer__c/fields/Bill_Period__c.field-meta.xml
<CustomField>
    <fullName>Bill_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Transfer object is looking up to the Bill Period object.</description>
    <label>Bill Period</label>
    <referenceTo>Bill_Period__c</referenceTo>
    <relationshipLabel>Transfers</relationshipLabel>
    <relationshipName>Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>