force-app/main/default/objects/Transfer__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <formula>TEXT(Shared_Solar_System__r.Billing_Method__c)</formula>
    <inlineHelpText>Bills are generated differently depending on NMC or kWh</inlineHelpText>
    <label>Billing Method</label>
    <type>Text</type>
</CustomField>