force-app/main/default/objects/Transfer__c/fields/Bills_Generated__c.field-meta.xml
<CustomField>
    <fullName>Bills_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bills Generated</label>
    <type>Checkbox</type>
</CustomField>