force-app/main/default/objects/Transfer__c/fields/Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credits_Applied__c</fullName>
    <inlineHelpText>Number of dollar credits applied to customer bills this month</inlineHelpText>
    <label>Credits Applied</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>