force-app/main/default/objects/Transfer__c/fields/Date_of_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transfer__c</fullName>
    <label>Date of Transfer</label>
    <type>Date</type>
</CustomField>