force-app/main/default/objects/Transfer__c/fields/Default_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Credit_Value__c</fullName>
    <inlineHelpText>NMCRate for creating UASBs in markets where $ credit value is NOT set at the customer level (MA)</inlineHelpText>
    <label>Default Credit Value</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>