force-app/main/default/objects/Transfer__c/fields/Total_kWh_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Total_kWh_Transferred__c</fullName>
    <description>Aggregated Sum of kWh from Transfer Parts</description>
    <label>Total kWh Transferred</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>