force-app/main/default/objects/Transfer__c/fields/Total_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Total_Transferred__c</fullName>
    <inlineHelpText>Sum of Credit Amounts of all Transfer Parts</inlineHelpText>
    <label>Total Credits Transferred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>