force-app/main/default/objects/Transfer__c/fields/Transfer_kWh__c.field-meta.xml
<CustomField>
    <fullName>Transfer_kWh__c</fullName>
    <inlineHelpText>Actual # of kWh&apos;s transferred off host account</inlineHelpText>
    <label>Transfer kWh</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>