force-app/main/default/objects/Transfer__c/fields/Transferred_To__c.field-meta.xml
<CustomField>
    <fullName>Transferred_To__c</fullName>
    <inlineHelpText>Credits are transferred/billed to this party</inlineHelpText>
    <label>Transferred To</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Customer</fullName>
                
                    <default>true</default>
                
                    <label>Customer</label>
                
                </value>
            
                <value>
                
                    <fullName>Client</fullName>
                
                
                    <label>Client</label>
                
                </value>
            
                <value>
                
                    <fullName>BlueWave</fullName>
                
                
                    <label>BlueWave</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>