force-app/main/default/objects/Transfer__c/fields/UCB__c.field-meta.xml
<CustomField>
    <fullName>UCB__c</fullName>
    <formula>Shared_Solar_System__r.UCB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UCB</label>
    <type>Checkbox</type>
</CustomField>