force-app/main/default/objects/Transfer__c/validationRules/Billing_or_Enacted_ALS.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_or_Enacted_ALS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK(Allocation_Schedule__c)),
NOT(ISPICKVAL(Allocation_Schedule__r.Status__c, &apos;Billing&apos;)), NOT(ISPICKVAL(Allocation_Schedule__r.Status__c, &apos;Enacted By Utility&apos;)))</errorConditionFormula>
    <errorMessage>Allocation Schedule must be &quot;Billing&quot; or &quot;Enacted by Utility&quot;</errorMessage>
</ValidationRule>