force-app/main/default/objects/Transfer__c/validationRules/Default_Credit_Value_for_kWh_Projects.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Credit_Value_for_kWh_Projects</fullName>
    <active>true</active>
    <description>If Billing Method = kWh, Default Credit Value must be populated</description>
    <errorConditionFormula>AND(CONTAINS( Billing_Method__c, &quot;kWh&quot;), ISBLANK( Default_Credit_Value__c ))</errorConditionFormula>
    <errorMessage>The Default Credit Value must be filled out for kWh Transfers</errorMessage>
</ValidationRule>