force-app/main/default/objects/Transfer__c/validationRules/Default_Credit_Value_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Credit_Value_Range</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Default_Credit_Value__c)),
OR(
Default_Credit_Value__c &gt; 0.5,
Default_Credit_Value__c &lt; 0.01
)
)</errorConditionFormula>
    <errorDisplayField>Default_Credit_Value__c</errorDisplayField>
    <errorMessage>Default credit value must be greater than $0.01 and less than $0.50. The value should always be positive.</errorMessage>
</ValidationRule>