force-app/main/default/objects/Transfer__c/validationRules/Make_Attempted_Transfer_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Attempted_Transfer_Field_Required</fullName>
    <active>true</active>
    <description>The Attempted Credit Transfer and Attempted kWh Transfer fields are made to be required for new records created on or after 11/25/19.</description>
    <errorConditionFormula>OR(
ISNEW(),
DATEVALUE(CreatedDate)&gt;= DATE(2019,11,25)
)
&amp;&amp;
OR(
ISBLANK(Attempted_Transfer__c),
ISBLANK(Attempted_kWh_Transfer__c)
)</errorConditionFormula>
    <errorMessage>The Attempted Credit Transfer and Attempted kWh Transfer fields need to be populated before this record can be saved.</errorMessage>
</ValidationRule>