force-app/main/default/objects/Transfer__c/validationRules/Transfer_kWh_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_kWh_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Billing_Method__c = &apos;kWh&apos;,
ISBLANK(Transfer_kWh__c))</errorConditionFormula>
    <errorDisplayField>Transfer_kWh__c</errorDisplayField>
    <errorMessage>For Transfers with Billing Method of kWh, the Transfer kWh is required, For transfers returned to host, it could be on the host account bill &quot;Generation Retained by Host (Banked)&quot;</errorMessage>
</ValidationRule>